[project]
name = "hfonmac"
version = "0.1.0"
description = "Huggingface on the mac"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "torch>=2.7.1",
    "transformers>=4.54.1"]
